<resources>
    <string name="app_name">Rumbox</string>
    <string name="title_activity_menu_principa_">Realizar un pedido</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Rumbox</string>

    <!-- Validacion Login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar</string>
    <string name="action_sign_in_short">Iniciar</string>
    <string name="error_invalid_email">Nombre de usuario demasiado corto</string>
    <string name="error_invalid_password">Contraseña demasiado corta</string>
    <string name="error_incorrect_password">Contraseña no es valida</string>
    <string name="error_field_required">Usuario Requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Formulario Inscripcion Cliente-->
    <string name="titulo_formulario_registro_cliente">Inscripción Cliente</string>
    <string name="email_cliente">Email</string>
    <string name="pass_cliente">Contraseña</string>
    <string name="pass_repeat_cliente">Repita Contraseña</string>
    <string name="run_cliente">CI Run</string>
    <string name="ci_cliente">CI</string>
    <string name="pasaporte_cliente">Pasaporte</string>
    <string name="nombre_cliente">Nombre</string>
    <string name="apellido_cliente">Apellido</string>
    <string name="celular_cliente">Celular</string>
    <string name="boton_credito">Credito</string>
    <string name="boton_ok">OK</string>


    <!-- Formulario Inscripcion Tarjeta Credito-->
    <string name="titulo_formulario_registro_tarjeta_credito">Inscripción Tarjeta Crédito</string>
    <string name="nombre_tarjeta">Nombre Tarjeta</string>
    <string name="numero_tarjeta">Número Tarjeta</string>
    <string name="ccv_tarjeta">CCV Tarjeta</string>
    <string-array name="mes">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="anno">
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
    </string-array>
    <string name="bton_guardar">Guardar</string>
    <string name="title_activity_login2">Iniciar</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_menu_principal">Menu_principal</string>
    <string name="bienvenido">Bienvenido</string>

    <string name="envio_doc">Envio de Documentos</string>
    <string name="envio_enco">Envio de Encomienda</string>
    <string name="serv_carga">Servicio Carga Pesada</string>
    <string name="serv_trans_agendado">Servicio Transporte Agendado</string>
    <string name="mis_encomiendas">Mis Encomiendas</string>
    <string name="enco_recibidas">Encomiendas Recibidas</string>
    <string name="title_activity_tipo_servicio">Seleccione un Servicio</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="demo_collection">Demo Collection</string>

    <string name="demo_external_activity">Demo External Activity</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="title_activity_tabtest">tabtest</string>


    <!--Fetch Address-->
    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="buscar_direccion">Buscar Dirección</string>

    <string name="share">Share</string>
    <string name="upload">Upload</string>
    <string name="copy">Copy</string>
    <string name="print">Print this page</string>
    <string name="call">Call</string>
    <string name="help">Help</string>
    <string name="bottomsheet">BottomSheet Sample</string>

</resources>
