<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


        <item android:title="Mis Servicios">
            <menu>
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/envio_doc" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/envio_enco" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/serv_carga" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/serv_trans_agendado" />
            </menu>
        </item>


    <item android:title="Realizado">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/mis_encomiendas" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/enco_recibidas" />
        </menu>
    </item>

</menu>
