<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ubox.etec.com.rumbox.Inscripcion_cliente_Activity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <EditText
                android:id="@+id/etemail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_cliente"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="108dp"
                tools:layout_editor_absoluteY="25dp" />

            <EditText
                android:id="@+id/etpass"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/pass_cliente"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="108dp"
                tools:layout_editor_absoluteY="75dp" />

            <EditText
                android:id="@+id/etrepeatpass"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/pass_repeat_cliente"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="108dp"
                tools:layout_editor_absoluteY="125dp" />

            <EditText
                android:id="@+id/etrun"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/run_cliente"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="108dp"
                tools:layout_editor_absoluteY="175dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal|center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioCI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.38"
                    android:text="@string/ci_cliente" />

                <RadioButton
                    android:id="@+id/radioPasaporte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.24"
                    android:text="@string/pasaporte_cliente" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <EditText
                android:id="@+id/etnombre"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nombre_cliente"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="108dp"
                tools:layout_editor_absoluteY="266dp" />

            <EditText
                android:id="@+id/etapellido"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                android:ems="10"
                android:hint="@string/apellido_cliente"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="108dp"
                tools:layout_editor_absoluteY="316dp" />

            <EditText
                android:id="@+id/etcelular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/celular_cliente"
                android:inputType="number"
                tools:layout_editor_absoluteX="108dp"
                tools:layout_editor_absoluteY="366dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <Button
                android:id="@+id/btncredito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_credito" />

            <Button
                android:id="@+id/btnok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/bton_guardar" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
