    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="ubox.etec.com.rumbox.Login2Activity">

        <!-- Login progress -->
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/imageView2"
            android:src="@drawable/caja"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="224dp"
            android:layout_gravity="center"
            android:layout_weight="0.54">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center|center_horizontal"
                android:orientation="vertical"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="257dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_user"
                        android:hint="@string/prompt_email"
                        android:inputType="textAutoComplete"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="22sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="257dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_llave"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="22sp" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:layout_weight="0.29"
                    android:text="Iniciar"
                    android:textColor="@color/colorBlanco"
                    android:textSize="20dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1.66"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal"
                    android:paddingTop="20dp">

                    <TextView
                        android:id="@+id/txtRegistrar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:paddingRight="20dp"
                        android:text="Registrar"
                        android:textColor="@color/colorNegro" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="Olvide mi clave"
                        android:textColor="@color/colorNegro" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/login_progress"
            style="android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"

            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cargando..."
            android:id="@+id/cargandotxt"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorNegro"
            android:visibility="gone" />
    </LinearLayout>
